# DoorBell

./: .env.example  .gitignore  Caddyfile  README.md  deploy.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini
backend/app/: auth.py  bolna.py  classifier.py  config.py  csv_parser.py  db.py  main.py  models.py  pubsub.py  sweeper.py
backend/app/routers/: actions.py  calls.py  demo.py  orders.py  stats.py  stream.py  webhook.py
backend/tests/: conftest.py  test_actions.py  test_auth.py  test_bolna.py  test_calls.py  test_classifier.py  test_csv_parser.py  test_demo.py  test_health.py  test_models.py  test_orders.py  test_pubsub.py  test_stats.py  test_stream.py  test_sweeper.py  test_webhook.py
docs/: bolna-agent-prompt.md  deploy-runbook.md  dry-run-checklist.md
docs/superpowers/plans/: 2026-05-11-bolna-rto-confirmation-agent.md
docs/superpowers/specs/: 2026-05-11-bolna-rto-confirmation-agent-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: sample-orders.csv
frontend/src/: App.tsx  api.ts  index.css  sse.ts  store.ts  types.ts
frontend/src/components/: AudioPlayer.tsx  BucketTabs.tsx  ConnectionDot.tsx  DemoControlsMenu.tsx  ImpactStrip.tsx  OrderDrawer.tsx  OrderRow.tsx  OrderTable.tsx  TopBar.tsx  UploadModal.tsx
frontend/src/lib/: format.ts
scripts/: demo_orders.csv
