[project]
name = "riya-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.118.0",
  "uvicorn[standard]==0.32.0",
  "motor==3.6.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.0",
  "python-multipart==0.0.12",
  "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "mongomock-motor==0.0.34",
  "respx==0.21.1",
  "ruff==0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
